--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "rotating-file-stream": "^1.4.0",
     "supertest": "^4.0.0",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "install-peers": "^1.0.3"
   }
 }
