--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Express Gallery ===============",
   "main": "server.js",
   "scripts": {
+    "dev": "./node_modules/.bin/nodemon ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
