--- a/package.json
+++ b/package.json
@@ -1,44 +1,28 @@
 {
-  "name": "express-gallery",
+  "name": "auth_demo",
   "version": "1.0.0",
-  "description": "Express Gallery ===============",
-  "main": "server.js",
+  "description": "Some description",
+  "main": "index.js",
   "scripts": {
     "dev": "./node_modules/.bin/nodemon ./server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JimzyLui/express-gallery.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JimzyLui/express-gallery/issues"
-  },
-  "homepage": "https://github.com/JimzyLui/express-gallery#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bookshelf": "^0.14.2",
-    "chai": "^4.2.0",
-    "connect-flash": "^0.1.1",
-    "dotenv": "^7.0.0",
-    "express-handlebars": "^3.0.2",
+    "connect-redis": "^3.4.0",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "faker": "^4.1.0",
-    "joi": "^14.3.1",
     "knex": "^0.16.3",
-    "mocha": "^6.0.2",
-    "moment": "^2.24.0",
-    "morgan": "^1.9.1",
+    "nodemon": "^1.18.10",
     "passport": "^0.4.0",
-    "pg": "^7.8.2",
-    "popper": "^1.0.1",
-    "redis": "^2.8.0",
-    "rotating-file-stream": "^1.4.0",
-    "supertest": "^4.0.0",
-    "winston": "^3.2.1"
+    "passport-local": "^1.0.0",
+    "pg": "^7.8.1"
   },
   "devDependencies": {
     "install-peers": "^1.0.3"
