--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-handlebars": "^3.0.2",
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
+    "form-data": "^2.3.3",
     "joi": "^14.3.1",
     "knex": "^0.16.3",
     "mocha": "^6.0.2",
