--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "^7.8.1",
     "popper": "^1.0.1",
     "rotating-file-stream": "^1.4.0",
+    "sass": "^1.17.3",
     "supertest": "^4.0.0",
     "winston": "^3.2.1"
   },
