--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,13 +13,29 @@ services:
       - "${EXPRESS_HOST_PORT}:${EXPRESS_CONTAINER_PORT}"
     networks:
       - my-app-network
+  #Backend api
+  server:
+    container_name: server
+    build: ./
+    command: npm run db
+    working_dir: /user/src/server
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./:/user/src/server
+    environment:
+      POSTGRES_URI: postgres://test:test@192.168.99.100:5432/interapp
+    links:
+      - postgres
+    depends_on:
+      - postgres-primary-db
   postgres-primary-db:
     image: postgres:10.0-alpine
     env_file: .env
     volumes:
       - pg-data-volume:/var/lib/postgresql/data
     ports:
-      - '${POSTGRES_HOST_PORT}:${POSTGRES_CONTAINER_PORT}'
+      - "${POSTGRES_HOST_PORT}:${POSTGRES_CONTAINER_PORT}"
     networks:
       - my-app-network
   redis-server:
@@ -28,11 +44,10 @@ services:
     volumes:
       - redis-data-volume:/data
     ports:
-      - '${REDIS_HOST_PORT}:${REDIS_CONTAINER_PORT}'
+      - "${REDIS_HOST_PORT}:${REDIS_CONTAINER_PORT}"
     networks:
       - my-app-network
 volumes:
   pg-data-volume:
   redis-data-volume:
-networks:
-  my-app-network:
+networks: my-app-network:
